fix spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,6 @@ a.button1{
 
 } 
 
-.btn_span {
-    padding: 1px 8px;
-}
-
-
 
 #btn_back {
     display:none;
